@@ -1,3 +1,6 @@
+2009-11-22
+	* change default color scheme for code mark.
+
 2009-11-08
 	* fix a minor bug in SummaryCoding (Thanks Julien Biaudet)
 	
